Addition of Camera,Video and VoiceToText services

--- a/res/menu/next.xml
+++ b/res/menu/next.xml
@@ -14,17 +14,9 @@
      limitations under the License.
 -->
 
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/black" >
-    <TextView
-        android:id="@+id/seconds_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:layout_marginTop="-10px"
-        android:textSize="160px"
-        android:gravity="center" />
-</FrameLayout>
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item
+        android:id="@+id/next"
+        android:title="@string/next"
+        android:icon="@drawable/ic_next" />
+</menu>
